Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-42235

more than one instance of overloaded function signbit Intel compiler

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: Not Evaluated Not Evaluated
    • 5.4.0 RC
    • 5.4.0 Beta
    • Build System, Qt Script
    • None
    • eec790c8c699d859617712a77b224750a85a93ad

      This bug crept back in. 5.4.0 alpha compiled without this error.

      ../3rdparty/javascriptcore/JavaScriptCore/runtime/MathObject.cpp(177): error: more than one instance of overloaded function "signbit" matches the argument list:
      function "signbit(double)"
      function "std::signbit(double)"
      argument types are: (double)
      if (val > result || (val == 0 && result == 0 && !signbit(val)))

      Happens with
      Intel(R) C++ Intel(R) 64 Compiler XE for applications running on Intel(R) 64, Version 15.0.0.090 Build 20140723

      and previous version Version 14.0.2.144

        1. qt_beta_compile.txt
          26 kB
          Richard Fleck
        For Gerrit Dashboard: QTBUG-42235
        # Subject Branch Project Status CR V

            allan.jensen Allan Sandfeld Jensen
            rich Richard Fleck
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes