Fix intel cc build

The Intel compiler gets confused by the choice between std::signbit()
and signbit() so we need to remove the using declaration and make
the std namespace explicit to help it a little.

Change-Id: I0242de9497723cbb2f497f683b41b41fabef0b4c
Task-number: QTBUG-42235
Reviewed-by: Oswald Buddenhagen <oswald.buddenhagen@theqtcompany.com>
Reviewed-by: Simon Hausmann <simon.hausmann@digia.com>